bk_ida/gccida/c3/c_add_case_label
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3801:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3805:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3806:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3807:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3808:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3809:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3810:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3811:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3816:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3818:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3819:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3821:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3822:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3826:19: error: expected expression
v8 = ( tree_node *)global_trees; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3826:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)global_trees; 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3865:19: error: expected expression
v8 = ( tree_node *)global_trees; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3865:8: error: use of undeclared identifier 'tree_node'
v8 = ( tree_node *)global_trees; 
       ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3866:26: error: expected expression
if ( v14 == ( tree_node *)global_trees ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/c-common.c:3866:15: error: use of undeclared identifier 'tree_node'
if ( v14 == ( tree_node *)global_trees ) 
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_add_case_label/src/obj/c-common.o] Error 1
